--- a/WebContent/sae/manageAlumnis/list.xhtml
+++ b/WebContent/sae/manageAlumnis/list.xhtml
@@ -7,7 +7,7 @@
                 xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
                 xmlns:jsf="http://xmlns.jcp.org/jsf"
                 template="/WEB-INF/decorators/#{coreInfo.decorator}/decorator.xhtml">
-
+              
 	<ui:define name="title"><h:outputText value="#{msgsSae['manageAlumnis.title']}" /></ui:define>
     
     <ui:define name="description"><h:outputText value="#{msgsSae['manageAlumnis.title.description']}" /></ui:define>
@@ -39,9 +39,8 @@
 		
 		<!-- The listing form. -->
 		<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/form-nobox.xhtml">
-			<ui:param name="formName" value="listingForm" />
-
 			<p:dataTable
+				id="dataTableAlumnis"
 				widgetVar="listingTable"
 				value="#{manageAlumnisController.lazyEntities}" 
 				var="entity" 
@@ -74,6 +73,7 @@
 
 				<p:ajax event="rowSelect" update=":listingForm:buttonsGroup" />
 				<p:ajax event="rowUnselect" update=":listingForm:buttonsGroup" />
+				<ui:param name="dataTableAlumnis" value=":listingForm:dataTableAlumnis"></ui:param>
 			</p:dataTable>
 			<p:hotkey bind="ctrl+left" handler="goToFirstPage(listingTable);" />
 			<p:hotkey bind="left" handler="goToPreviousPage(listingTable);" />
