--- a/WebContent/sae/manageAlumnis/list.xhtml
+++ b/WebContent/sae/manageAlumnis/list.xhtml
@@ -39,6 +39,7 @@
 		
 		<!-- The listing form. -->
 		<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/form-nobox.xhtml">
+			<ui:param name="formName" value="listingForm" />
 			<p:dataTable
 				id="dataTableAlumnis"
 				widgetVar="listingTable"
