Add Interest Subjects and Seminars front-end

--- a/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
+++ b/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
@@ -40,6 +40,8 @@
 					<li><h:link outcome="/sae/manageAlumniHistories/list"><h:outputText value="#{msgsSae['core.menu.sae.manageAlumniHistories']}" /></h:link></li>
 					<li><h:link outcome="/sae/manageStatements/list"><h:outputText value="#{msgsSae['core.menu.sae.manageStatements']}" /></h:link></li>
 					<li><h:link outcome="/sae/manageSuggestions/list"><h:outputText value="#{msgsSae['core.menu.sae.manageSuggestions']}" /></h:link></li>
+					<li><h:link outcome="/sae/manageInterestSubjects/list"><h:outputText value="#{msgsSae['core.menu.sae.manageInterestSubjects']}" /></h:link></li>
+					<li><h:link outcome="/sae/manageSeminars/list"><h:outputText value="#{msgsSae['core.menu.sae.manageSeminars']}" /></h:link></li>
 				</ul>
 			</li>
 		</h:panelGroup>
